--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,53 +3,82 @@
 */
 body {
     background-color: #000;
-color: #fff;
-font-family: 'Arial', sans-serif;
+    color: #fff;
+    font-family: 'Arial', sans-serif;
 }
+
 .navbar {
-    border-bottom: 1px solid #555; /* Línea inferior */
+    border-bottom: 1px solid #555;
+    /* Línea inferior */
 }
 
 .navbar-nav .nav-link {
     color: #ccc;
     font-size: 14px;
-    margin: 0 15px; /* Espaciado entre elementos */
+    margin: 0 15px;
 }
 
 .navbar-nav .nav-link:hover {
     color: #fff;
 }
-.navbar-brand {
-    color: #ffc107 !important;
-font-size: 1.5rem;
+
+.nav-link.active {
+    border-bottom: 0.5px solid white;
+    box-shadow: inset 0 -2px 0px rgba(255, 252, 127, 0.7); /* Brillo solo en el borde inferior */
 }
 
-/* Estilos para pantallas pequeñas */
+.navbar-brand {
+    color: #ffc107 !important;
+    font-size: 1.5rem;
+}
+
+
 @media (max-width: 991.98px) {
     .navbar-nav {
-        text-align: center; /* Centrar elementos en pantallas pequeñas */
+        text-align: center;
     }
 }
 
-.jumbotron {
-    background: url('https://via.placeholder.com/1500x500') no-repeat center center;
-background-size: cover;
-color: #fff;
-padding: 100px 0;
-text-align: center;
-}
 .card {
     background-color: #222;
-color: #fff;
-margin-bottom: 20px;
+    color: #fff;
+    margin-bottom: 20px;
 }
+
 .card-img-top {
     width: 100%;
-height: auto;
+    height: auto;
 }
+
 .footer {
     background-color: #111;
-color: #fff;
-padding: 20px 0;
-text-align: center;
+    color: #fff;
+    padding: 20px 0;
+    text-align: center;
+}
+
+::-webkit-scrollbar {
+    width: 10px; /* Ancho de la barra de desplazamiento */
+    height: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Color de fondo de la pista */
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888; /* Color del pulgar (la parte móvil) */
+    border-radius: 5px; /* Bordes redondeados */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Color al pasar el ratón */
+}
+
+small{
+    font-size: 1rem;
+
+}
+small:hover{
+    cursor: pointer;
 }
