--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,6 @@ body {
 
 .navbar {
     border-bottom: 1px solid #555;
-    /* Línea inferior */
 }
 
 .navbar-nav .nav-link {
@@ -24,7 +23,7 @@ body {
 
 .nav-link.active {
     border-bottom: 0.5px solid white;
-    box-shadow: inset 0 -2px 0px rgba(255, 252, 127, 0.7); /* Brillo solo en el borde inferior */
+    box-shadow: inset 0 -2px 0px rgba(255, 252, 127, 0.7);
 }
 
 .navbar-brand {
@@ -75,16 +74,15 @@ body {
     background: #555; /* Color al pasar el ratón */
 }
 
-small{
-    font-size: 1rem;
-
-}
-small:hover{
-    cursor: pointer;
-}
-
 .table {
     color: #f1f1f1;
 }
 
 
+.spinner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20vh;
+  }
+  
